<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rr.reflexreactor.Mode">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".50"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/appicon"
            android:padding="30dp"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".50"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_soloplayer"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_soloplayer"
                android:textSize="25dp"
                android:onClick="soloplay"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_multiplayer"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_multiplayer"
                android:textSize="25dp"
                android:onClick="multiplay"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_stats"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_stats"
                android:textSize="25dp"
                android:onClick="stats"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_help"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_help"
                android:textSize="25dp"
                android:onClick="help"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
