<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.nikita.helplayout.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bulbs">
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/redstrip">

            <TextView
                android:id="@+id/abtRR"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_height="wrap_content"
                android:text="ABOUT REFLEX REACTOR"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="25dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/RR_txt"
                android:layout_gravity="fill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/RR"
                android:textSize="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/redstrip">

            <TextView
                android:id="@+id/abtLevels"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_height="wrap_content"
                android:text="ABOUT LEVELS"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="25dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/level_txt"
                android:layout_gravity="fill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/level"
                android:textSize="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/redstrip">

            <TextView
                android:id="@+id/abtCat"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_height="wrap_content"
                android:text="ABOUT CATEGORIES"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="25dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Cat_txt"
                android:layout_gravity="fill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cat"
                android:textSize="18dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/redstrip">

            <TextView
                android:id="@+id/Rules"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_height="wrap_content"
                android:text="RULES AND BASICS"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:textSize="25dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/rule_txt"
                android:layout_gravity="fill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rules"
                android:textSize="18dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>